fix(landing-page-gv): fixed mobile alignment and text spacing

--- a/src/app/landing-page-gv/landing-page-gv.component.html
+++ b/src/app/landing-page-gv/landing-page-gv.component.html
@@ -177,7 +177,7 @@
         </div>
         <div class="aiesec-info col-lg-7 col-sm-12 col-md-12">
           <h2 class='bold darker' i18n="@@programAboutTitle">
-            Benefícios
+            BENEFÍCIOS
           </h2>
           <div class="row">
             <div class="col-lg-2 col-md-12 col-sm-12 centered">
