--- a/src/app/landing-page-subproducts/landing-page-subproducts.component.html
+++ b/src/app/landing-page-subproducts/landing-page-subproducts.component.html
@@ -26,7 +26,7 @@
             {{ subproduct.description }}
           </p>
           <a href='{{subproduct.link}}' [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank" *ngIf="actualPage != 'talento-global'"> Ver oportunidades </a>
-          <a [ngx-scroll-to]="'#form'" [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank" *ngIf="actualPage == 'talento-global'"> Ver oportunidades </a>
+          <a [ngx-scroll-to]="'#form'" [ngx-scroll-to-offset]="-60" [ngClass]="{'gv': actualPage == 'voluntario-global', 'ge': actualPage == 'empreendedor-global', 'gt': actualPage == 'talento-global'}" target="_blank" *ngIf="actualPage == 'talento-global'"> Ver oportunidades </a>
         </div>
       </div>
     </div>
