fix(form-ge, form-gt): fixed typo in ge and gt forms

--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -376,7 +376,7 @@
                 <div class="form-group">
                   <div class='error-message'>
                     <p> 
-                      {{ invalidateArchiveExtension ? 'No se pudo subir. Por favor inserte un archivo con extensión .pdf' : 'Seleccione un archivo en formato PDF (.PDF)' }} </p>
+                      {{ invalidateArchiveExtension ? 'No se pudo subir. Por favor insertá un archivo con extensión .pdf' : 'Seleccione un archivo en formato PDF (.PDF)' }} </p>
                   </div>
                   <div class="input-group input-file">
                     <div class="input-group-prepend desktop">
