--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -395,7 +395,7 @@
                 </div>
 
                 <div class="form-group">
-                    <div class='error-message'>
+                    <div class='error-message' *ngIf="invalidateArchiveExtension || !curriculumFile">
                       <p> 
                         {{ invalidateArchiveExtension ? 'No se pudo subir. Por favor insertá un archivo con extensión .pdf' : 'Seleccione un archivo en formato PDF (.PDF)' }} </p>
                     </div>
