--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -374,7 +374,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <div class='error-message'>
+                  <div class='error-message' *ngIf="invalidateArchiveExtension || !curriculumFile">
                     <p> 
                       {{ invalidateArchiveExtension ? 'No se pudo subir. Por favor insertá un archivo con extensión .pdf' : 'Seleccione un archivo en formato PDF (.PDF)' }} </p>
                   </div>
