fix(landing-page, landing-page-menu, form-gv):changed header images and add a intro.

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -233,6 +233,9 @@
       <button class='button with-background bold gv without-border border-radius margin' (click)='scrollToForm()'> Inscribite </button>
     </div>
     <div class="product-info" *ngIf="actualPage == ''">
+      <h1 class='color-white bold intro' i18n="@@landingPageIntro">
+        A AIESEC é o maior movimento de liderança jovem do mundo
+      </h1>
     </div>
   </div>
 </section>
