--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -105,10 +105,10 @@ ul#menu {
     z-index: 11;
     .header-product-image {
         @at-root :host-context(.no-webp) #{&} {
-            background-image: url('../../assets/images/amigo.png');
+            background-image: url('../../assets/images/header.jpg');
         }
         @at-root :host-context(.webp) #{&} {
-            background-image: url('../../assets/images/amigo.png');
+            background-image: url('../../assets/images/header.jpg.webp');
         }
         width: 100%;
         height: 100%;
@@ -131,10 +131,10 @@ ul#menu {
         }
         &.voluntario-global {
             @at-root :host-context(.no-webp) #{&} {
-                background-image: url('../../assets/images/amigo.png');
+                background-image: url('../../assets/products/gv/gv-intro.jpg');
             }
             @at-root :host-context(.webp) #{&} {
-                background-image: url('../../assets/images/amigo.png');
+                background-image: url('../../assets/products/gv/gv-intro.jpg.webp');
             }
         }
         &.emprendedor-global {
@@ -230,7 +230,7 @@ ul#menu {
         text-align: left;
         h1 {
             margin-top: -100px;
-            font-size: 25px;
+            //font-size: 25px;
         }
     }
 }
