wip(landing-page-membership / form-membership)

--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -18,29 +18,29 @@
         <div class="col-lg-4 col-sm-12 col-md-12">
           <div class="experience-idea"></div>
           <h3 class="centered experience-idea-header">
-            Ter experiências <br> práticas
+            Ter experiências práticas
           </h3>
           <p class="centered">
-            Desenvolver habilidades <br> essenciais, lidando com <br> pessoas e problemas reais!
+            Desenvolver habilidades essenciais, lidando com pessoas e problemas reais!
           </p>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-12">
           <div class="experience-handshake"></div>
           <h3 class="centered experience-handshake-header">
-            Responsabillidade <br> social
+            Responsabillidade social
           </h3>
           <p class="centered">
-            Sentir que está fazendo algo <br> efetivo para transformar a sua <br> realidade local!
+            Sentir que está fazendo algo efetivo para transformar a sua realidade local!
           </p>
         </div>
         <div class="col-lg-4 col-sm-12 col-md-12">
           <div class="experience-earth"></div>
           <h3 class="centered experience-earth-header">
-            Ser parte de uma rede <br>
+            Ser parte de uma rede 
             global
           </h3>
           <p class="centered">
-            Estar conectado com pessoas e <br> organizações de diversos países, <br> que compartilham da crença de <br> um mundo melhor!
+            Estar conectado com pessoas e  organizações de diversos países,  que compartilham da crença de  um mundo melhor!
           </p>
         </div>        
       </div>
@@ -59,7 +59,7 @@
     <div class="col-lg-6 col-sm-12 col-md-12 job-description-info">
       <div class="row">
         <div class="col-lg-2 col-md-12 col-sm-12 centered">
-          <div class="round circle icon without-background gt"></div>
+            <i class="fas fa-briefcase"></i>
         </div>
         <div class="col-lg-10 col-md-12 col-sm-12">
           <p>
@@ -69,7 +69,7 @@
       </div>
       <div class="row">
         <div class="col-lg-2 col-md-12 col-sm-12 centered">
-          <div class="round circle icon without-background gt"></div>
+            <i class="fas fa-bullhorn"></i>
         </div>
         <div class="col-lg-10 col-md-12 col-sm-12">
           <p>
@@ -79,7 +79,7 @@
       </div>
       <div class="row">
         <div class="col-lg-2 col-md-12 col-sm-12 centered">
-          <div class="round circle icon without-background gt"></div>
+            <i class="fas fa-users"></i>
         </div>
         <div class="col-lg-10 col-md-12 col-sm-12">
           <p>
@@ -89,7 +89,7 @@
       </div>
       <div class="row">
         <div class="col-lg-2 col-md-12 col-sm-12 centered">
-          <div class="round circle icon without-background gt"></div>
+            <i class="fas fa-sitemap"></i>
         </div>
         <div class="col-lg-10 col-md-12 col-sm-12">
           <p>
@@ -99,7 +99,7 @@
       </div>
       <div class="row">
         <div class="col-lg-2 col-md-12 col-sm-12 centered">
-          <div class="round circle icon without-background gt"></div>
+            <i class="fas fa-plane"></i>
         </div>
         <div class="col-lg-10 col-md-12 col-sm-12">
           <p>
@@ -109,7 +109,7 @@
       </div>
       <div class="row">
         <div class="col-lg-2 col-md-12 col-sm-12 centered">
-          <div class="round circle icon without-background gt"></div>
+            <i class="fas fa-money-bill"></i>
         </div>
         <div class="col-lg-10 col-md-12 col-sm-12">
           <p>
