--- a/src/app/landing-page-membership/landing-page-membership.component.scss
+++ b/src/app/landing-page-membership/landing-page-membership.component.scss
@@ -955,6 +955,9 @@ drag-scroll {
         }
     }
     .experiences-session {
+        .col-md-12 {
+            padding: 20px;
+        }
         .LDM {
             transform: scale(1)
         }
