--- a/src/app/form-membership/form-membership.component.html
+++ b/src/app/form-membership/form-membership.component.html
@@ -1,7 +1,8 @@
 <head>
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 </head>
-<div id="step1" class="form-talentos-globais" [ngClass]="{'full-screen': formedUser, 'full-screen-embedded': embeddedForm}">
+<div id="step1" class="form-talentos-globais"
+  [ngClass]="{'full-screen': formedUser, 'full-screen-embedded': embeddedForm}">
   <div class="full-width">
     <!-- Header -->
     <section class="header" id="header-talentos-globais" #headerGTRef>
@@ -22,7 +23,8 @@
     </section>
 
     <!-- Form -->
-    <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading" (window:resize)="onResize($event)">
+    <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading"
+      (window:resize)="onResize($event)">
       <div class="container">
         <div class="row justify-content-center">
 
@@ -30,7 +32,8 @@
 
             <!-- Content -->
             <!-- Alert -->
-            <div class="alert alert-warning alert-dismissible fade show animated fadeIn" role="alert" *ngIf="invalidEmail">
+            <div class="alert alert-warning alert-dismissible fade show animated fadeIn" role="alert"
+              *ngIf="invalidEmail">
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <i class="far fa-times-circle fa-lg"></i>
               </button>
@@ -38,7 +41,7 @@
                 <strong>Gostaria de acessar a plataforma?</strong>
               </p>
             </div>
-            <div class="animated fadeIn" *ngIf="personalData && !completedSignup">
+            <div class="animated fadeIn" *ngIf="!completedSignup">
               <form [formGroup]="form" class="forms gv" (keydown.enter)="registerUser()">
                 <div class="form-group">
                   <div class="input-group">
@@ -47,13 +50,13 @@
                         <i class="fas fa-user"></i>Nome Completo</div>
                     </div>
                     <!-- desktop -->
-                    <input type="text" class="form-control desktop" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname" formControlName="fullname"
-                      name="fullname" required>
+                    <input type="text" class="form-control desktop" placeholder="Como é pra gente te chamar?"
+                      [(ngModel)]="user.fullname" formControlName="fullname" name="fullname" required>
 
                     <!-- mobile -->
                     <i class="fas fa-user mobile mobile-icon"></i>
-                    <input type="text" class="form-control mobile" placeholder="Nome completo" [(ngModel)]="user.fullname" formControlName="fullname"
-                      name="fullname" required>
+                    <input type="text" class="form-control mobile" placeholder="Nome completo"
+                      [(ngModel)]="user.fullname" formControlName="fullname" name="fullname" required>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -70,8 +73,9 @@
                     </div>
 
                     <i class="fas fa-gift mobile mobile-icon"></i>
-                    <input class="form-control p-inputMask gv" id="inputDatadeNascimento" (blur)="checkDate()" placeholder="{{ placeholderBirthdate }}"
-                      [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" mask="00/00/0000" />
+                    <input class="form-control p-inputMask gv" id="inputDatadeNascimento" (blur)="checkDate()"
+                      placeholder="{{ placeholderBirthdate }}" [(ngModel)]="user.birthdate" formControlName="birthdate"
+                      name="birthdate" mask="00/00/0000" />
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -93,13 +97,15 @@
                         <i class="fas fa-mobile-alt"></i>Celular</div>
                     </div>
                     <!-- desktop -->
-                    <input type="tel" class="form-control desktop tel-mask" placeholder="Vamos falar com você por aqui!" [(ngModel)]="user.cellphone"
-                      formControlName="cellphone" name="cellphone" mask="(00) 00000-0000" (blur)="checkPhone()" required>
+                    <input type="tel" class="form-control desktop tel-mask" placeholder="Vamos falar com você por aqui!"
+                      [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" mask="(00) 00000-0000"
+                      (blur)="checkPhone()" required>
 
                     <!-- mobile -->
                     <i class="fas fa-mobile-alt mobile mobile-icon"></i>
-                    <input type="tel" class="form-control mobile tel-mask" placeholder="Celular" [(ngModel)]="user.cellphone" formControlName="cellphone"
-                      name="cellphone" mask="(00) 0000-00009" (blur)="checkPhone()" required>
+                    <input type="tel" class="form-control mobile tel-mask" placeholder="Celular"
+                      [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" mask="(00) 0000-00009"
+                      (blur)="checkPhone()" required>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -118,13 +124,14 @@
                         <i class="fas fa-envelope"></i>E-mail</div>
                     </div>
                     <!-- desktop -->
-                    <input type="email" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
+                    <input type="email" class="form-control desktop"
+                      placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
                       (blur)="checkEmail()" formControlName="email" name="email" email required>
 
                     <!-- mobile -->
                     <i class="fas fa-envelope mobile-icon mobile"></i>
-                    <input type="email" class="form-control mobile" placeholder="Email" [(ngModel)]="user.email" (blur)="checkEmail()" formControlName="email"
-                      name="email" email required>
+                    <input type="email" class="form-control mobile" placeholder="Email" [(ngModel)]="user.email"
+                      (blur)="checkEmail()" formControlName="email" name="email" email required>
                     <div class="valid-feedback" *ngIf="!invalidEmail">
                       <i class="fa fa-check"></i>
                     </div>
@@ -140,16 +147,16 @@
                   <div class="input-group">
                     <div class="input-group-prepend desktop">
                       <div class="input-group-text">
-                        <i class="fas fa-map-marker-alt"></i>Cidade</div> 
+                        <i class="fas fa-map-marker-alt"></i>Cidade</div>
                     </div>
                     <!-- desktop -->
-                    <input type="text" class="form-control desktop" placeholder="Qual o nome da cidade onde vive?" [(ngModel)]="user.city" formControlName="city"
-                      name="city" required>
+                    <input type="text" class="form-control desktop" placeholder="Qual o nome da cidade onde vive?"
+                      [(ngModel)]="user.city" formControlName="city" name="city" required>
 
                     <!-- mobile -->
                     <i class="fas fa-map-marked-alt mobile mobile-icon"></i>
-                    <input type="text" class="form-control mobile" placeholder="Cidade" [(ngModel)]="user.city" formControlName="city"
-                      name="city" required>
+                    <input type="text" class="form-control mobile" placeholder="Cidade" [(ngModel)]="user.city"
+                      formControlName="city" name="city" required>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -165,13 +172,13 @@
                         <i class="fas fa-map-marker-alt"></i>Estado</div>
                     </div>
                     <!-- desktop -->
-                    <input type="text" class="form-control desktop" placeholder="Qual o seu estado?" [(ngModel)]="user.state" formControlName="state"
-                      name="state" required>
+                    <input type="text" class="form-control desktop" placeholder="Qual o seu estado?"
+                      [(ngModel)]="user.state" formControlName="state" name="state" required>
 
                     <!-- mobile -->
                     <i class="fas fa-map-marked-alt mobile mobile-icon"></i>
-                    <input type="text" class="form-control mobile" placeholder="Estado" [(ngModel)]="user.state" formControlName="state"
-                      name="state" required>
+                    <input type="text" class="form-control mobile" placeholder="Estado" [(ngModel)]="user.state"
+                      formControlName="state" name="state" required>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -182,22 +189,26 @@
                 </div>
                 <div class="form-group college_course">
                   <div class="input-group select-dropdown">
-                    <div class="input-group-prepend">
+                    <div class="input-group-prepend desktop">
                       <div class="input-group-text">
                         <i class="fas fa-book-open"></i>Curso</div>
                     </div>
+                    <i class="fas fa-book-open mobile mobile-icon"></i>
                     <div class="dropdown">
                       <div class="styled-select">
-                        <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)"
-                          #coursesAutocomplete (onFocus)="selectInput('college_course');coursesAutocomplete.handleDropdownClick();"
-                          dropdownMode="current" field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado"
-                          placeholder="Insira seu curso"></p-autoComplete>
-                        <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('college_course')" *ngIf="user.college_course"></i>
+                        <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses"
+                          (completeMethod)="searchCourses($event)" #coursesAutocomplete
+                          (onFocus)="selectInput('college_course');coursesAutocomplete.handleDropdownClick();"
+                          dropdownMode="current" field="name" formControlName="college_course_id"
+                          emptyMessage="Nenhum resultado" placeholder="Insira seu curso">
+                        </p-autoComplete>
+                        <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('college_course')"
+                          *ngIf="user.college_course.id"></i>
                       </div>
                     </div>
                   </div>
                   <div *ngIf="isValid('college_course_id')" class='error-message'>
-                    Selecione um curso.
+                    Selecione uma das opções
                   </div>
                 </div>
                 <div class="form-group local_committee">
@@ -209,11 +220,14 @@
                     <i class="fas fa-map-marker-alt mobile mobile-icon"></i>
                     <div class="dropdown">
                       <div class="styled-select">
-                        <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
-                          #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();"
-                          dropdownMode="current" field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado"
-                          placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
-                        <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')" *ngIf="user.local_committee.id"></i>
+                        <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces"
+                          (completeMethod)="searchPlaces($event)" #placesAutocomplete
+                          (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();"
+                          dropdownMode="current" field="name" formControlName="local_committee_id"
+                          emptyMessage="Nenhum resultado" placeholder="Esse é o escritório que vai cuidar de você!">
+                        </p-autoComplete>
+                        <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"
+                          *ngIf="user.local_committee.id"></i>
                       </div>
                     </div>
                   </div>
@@ -230,7 +244,8 @@
                           <label class='forms-tem-accepted info-mobile-content'>
                             Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
                             <br>
-                            <span style='text-decoration: underline; cursor: pointer;' (click)='openModal()'> Para ler os termos, basta clicar aqui. </span>
+                            <span style='text-decoration: underline; cursor: pointer;' (click)='openModal()'> Para ler
+                              os termos, basta clicar aqui. </span>
                           </label>
                         </div>
                       </div>
@@ -238,16 +253,18 @@
                   </div>
                   <div class='col-sm-12'>
                     <div class="form-group form-check text-center checkbox">
-                      <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable" id="aceitoTermos" [(ngModel)]="user.cellphone_contactable"
+                      <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable"
+                        id="aceitoTermos" [(ngModel)]="user.cellphone_contactable"
                         formControlName="cellphone_contactable" name="cellphone_contactable">
-                      <label class="form-check-label" for="aceitoTermos"> Gostaria de ser contatado por ligação ou mensagens no meu número de celular.</label>
+                      <label class="form-check-label" for="aceitoTermos"> Gostaria de ser contatado por ligação ou
+                        mensagens no meu número de celular.</label>
                     </div>
                   </div>
                 </div>
               </form>
             </div>
 
-            <section class="content" id="resultado" *ngIf="completedSignup">
+            <section class="content" id="success" *ngIf="completedSignup">
               <script type="text/javascript">
                 fbq('track', 'Lead');
               </script>
@@ -266,11 +283,13 @@
                     <div class="row justify-content-center">
                       <div class="col-sm-12" id="content-resultado">
                         <p>
-                          Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por oportunidades internacionais
+                          Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar
+                          por oportunidades internacionais
                           em empresas na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais
                           informações.
                         </p>
-                        <button (click)="accessAiesec()" type="button" class="btn btn-primary">Acessar o Portal de Oportunidades</button>
+                        <button (click)="accessAiesec()" type="button" class="btn btn-primary">Acessar o Portal de
+                          Oportunidades</button>
                       </div>
                     </div>
                   </div>
@@ -280,11 +299,8 @@
 
             <div class="form-row buttons" *ngIf="!completedSignup" id="row-with-buttons">
               <div class="col">
-                <button type="button" (click)="registerUser(headerGTRef)" class="btn btn-primary" *ngIf="personalData" [disabled]='form.invalid || (!matchDate || invalidEmail)'>Enviar</button>
-                <!-- <button type="button" (click)="submit(headerGTRef)" class="btn btn-primary submit-form" *ngIf="studyData" [disabled]='unableToSubmit()'>
-                  Enviar
-                  <i class="fab fa-telegram-plane"></i>
-                </button> -->
+                <button type="button" (click)="submit()" class="btn btn-primary"
+                  [disabled]='form.invalid || (!matchDate || invalidEmail || unableToSubmit())'>Enviar</button>
               </div>
             </div>
           </div>
@@ -298,9 +314,9 @@
 </div>
 
 <div id='modal' class='animated fadeIn faster' *ngIf="modal">
-    <div class='modal-bg' (click)='closeModal()'></div>
-    <div class='close-modal-button' (click)='closeModal()'>
-      <i class="fas fa-times-circle"></i>
-    </div>
-    <app-terms></app-terms>
+  <div class='modal-bg' (click)='closeModal()'></div>
+  <div class='close-modal-button' (click)='closeModal()'>
+    <i class="fas fa-times-circle"></i>
   </div>
+  <app-terms></app-terms>
+</div>
