fix(form-ge, form-gt, form-gv): gv cellphone input mask removed and changed birthdate input types to tel for numeric keyboard
ARG-72 - https://devmagic.atlassian.net/browse/ARG-72

--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -129,7 +129,7 @@
 
                     <i class="fas fa-gift mobile mobile-icon"></i>
                     <input class="form-control p-inputMask gv" id="inputDatadeNascimento" (blur)="checkDate()" placeholder="{{ placeholderBirthdate }}"
-                      [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" mask="00/00/0000">
+                      [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" mask="00/00/0000" type="tel">
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
