--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -80,11 +80,13 @@
                         <i class="fas fa-mobile-alt"></i><span i18n="@@cellphone">Celular</span></div>
                     </div>
                     <!-- desktop -->
-                    <input type="tel" class="form-control desktop tel-mask" mask="{{ cellphoneMask }}" placeholder="Vamos falar com você por aqui!"
-                      [(ngModel)]="user.cellphone" formControlName="cellphone" name="new-user-pass" i18n-placeholder="@@cellphonePlaceholder" (keydown)='checkMaskCellphone($event)' (blur)="checkPhone()" required>
+                    <input type="tel" class="form-control desktop tel-mask" placeholder="Vamos falar com você por aqui!"
+                      [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" i18n-placeholder="@@cellphonePlaceholder" (blur)="checkPhone()" required>
+                      <!-- mask="{{ cellphoneMask }}" (keydown)='checkMaskCellphone($event)'-->
                     <!-- mobile -->
                     <i class="fas fa-mobile-alt mobile mobile-icon"></i>
-                    <input name="new-user-pass" i18n-placeholder="@@cellphonePlaceholder" type="tel" class="form-control mobile" mask="{{ cellphoneMask }}" [(ngModel)]="user.cellphone" (blur)="checkPhone()" (keydown)='checkMaskCellphone($event)' formControlName="cellphone" placeholder="Número" required/>
+                    <input name="cellphone" i18n-placeholder="@@cellphonePlaceholder" type="tel" class="form-control mobile" [(ngModel)]="user.cellphone" (blur)="checkPhone()" formControlName="cellphone" placeholder="Número" required/>
+                    <!-- mask="{{ cellphoneMask }}" (keydown)='checkMaskCellphone($event)'-->
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
@@ -130,7 +132,7 @@
 
                     <i class="fas fa-gift mobile mobile-icon"></i>
                     <input class="form-control p-inputMask gv" id="inputDatadeNascimento" formControlName="birthdate" (blur)="checkDate()" placeholder="{{ placeholderBirthdate }}"
-                      [(ngModel)]="user.birthdate" name="birthdate" mask="00/00/0000" />
+                      [(ngModel)]="user.birthdate" name="birthdate" mask="00/00/0000" type="tel" />
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
