fix(landing-page-membership): fixed reported visual issues (QA)

--- a/src/app/form-membership/form-membership.component.html
+++ b/src/app/form-membership/form-membership.component.html
@@ -15,7 +15,7 @@
         <div *ngIf="!completedSignup">
           <div class="row" *ngIf="!embeddedForm">
             <div class="col-sm">
-              <h1 id='intro-text'>Conecte-se a uma rede global de jovens líderes! <br> Vem ser parte da AIESEC!</h1>
+              <h1 id='intro-text'>Conecte-se a uma rede global de jovens líderes! <br><br> Vem ser parte da AIESEC!</h1>
             </div>
           </div>
         </div>
