--- a/src/app/landing-page-membership/landing-page-membership.component.html
+++ b/src/app/landing-page-membership/landing-page-membership.component.html
@@ -59,60 +59,60 @@
     </div>
     <div class="col-lg-6 col-sm-12 col-md-12 job-description-info">
       <div class="row">
-        <div class="col-lg-2 col-md-12 col-sm-12 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-width">
             <i class="fas fa-briefcase"></i>
         </div>
-        <div class="col-lg-10 col-md-12 col-sm-12">
+        <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
             Vendas para jovens, ONGs e empresas
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-md-12 col-sm-12 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-width">
             <i class="fas fa-bullhorn"></i>
         </div>
-        <div class="col-lg-10 col-md-12 col-sm-12">
+        <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
             Marketing virtual e físico B2C e B2B
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-md-12 col-sm-12 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-width">
             <i class="fas fa-users"></i>
         </div>
-        <div class="col-lg-10 col-md-12 col-sm-12">
+        <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
             Gestão de Times e processos de Recursos Humanos
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-md-12 col-sm-12 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-width">
             <i class="fas fa-sitemap"></i>
         </div>
-        <div class="col-lg-10 col-md-12 col-sm-12">
+        <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
             Operações e trabalho com processos
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-md-12 col-sm-12 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-width">
             <i class="fas fa-plane"></i>
         </div>
-        <div class="col-lg-10 col-md-12 col-sm-12">
+        <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
             Entrega das nossas experiências de intercâmbio
           </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-2 col-md-12 col-sm-12 centered">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-width">
             <i class="fas fa-money-bill"></i>
         </div>
-        <div class="col-lg-10 col-md-12 col-sm-12">
+        <div class="col-lg-9 col-md-9 col-sm-9 mobile-col">
           <p>
             Gestao de recursos financeiros e investimentos
           </p>
