fix(*): fixed typo '“increver” to “inscrever” in thank you pages
AIESEC-354 - https://devmagic.atlassian.net/browse/AIESEC-354

--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -348,7 +348,7 @@
                   <div class="col-sm">
                     <div class="row justify-content-center">
                       <div class="col-sm-9" id="header-resultado">
-                        <h2>Obrigado por se increver!</h2>
+                        <h2>Obrigado por se inscrever!</h2>
                         <h3>Fique ligado no seu e-mail que enviaremos informações úteis para você por lá.</h3>
                       </div>
                       <div class="col-sm-3">
