--- a/src/app/form-gt/form-gt-thank-you/form-gt-thank-you.component.html
+++ b/src/app/form-gt/form-gt-thank-you/form-gt-thank-you.component.html
@@ -13,7 +13,7 @@
 									<div class="col-md">
 										<div class="row justify-content-center">
 											<div class="col-md-12" id="header-resultado">
-												<h2>Obrigado por se increver!</h2>
+												<h2>Obrigado por se inscrever!</h2>
 											</div>
 											<div class="col-md-12 grid-message mobile-message" id="grid-message">
 												<div class="col-md-10">
