--- a/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
+++ b/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
@@ -22,7 +22,7 @@
 									<div class="col-lg-11 col-md-12 col-sm-12">
 										<div class="row justify-content-center">
 											<div class="col-md-12" id="header-resultado">
-												<h2>Obrigado por se increver!</h2>
+												<h2>Obrigado por se inscrever!</h2>
 											</div>
 											<div class="col-md-12 grid-message mobile-message" id="grid-message">
 												<div class="col-md-12 col-sm-12">
