fix(landing-footer, contact-list): removed fixed year in footer, added dynamic one. removed RIBEIRÃO PRETO from contact list.
AIESEC-350 - https://devmagic.atlassian.net/browse/AIESEC-350

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -137,6 +137,6 @@
     </div>
   </div>
   <div class="footer-copyright">
-    <p>AIESEC do Brasil 2018. Todos os direitos reservados.</p>
+    <p>AIESEC do Brasil {{year}}. Todos os direitos reservados.</p>
   </div>
 </footer>
